# Projet-MCS

./: .gitignore  CMakeLists.txt  DiapoSoutenance.odp  Makefile  readme.md
Client/: Makefile  client.c  client.h  main.c
Entrepot/: Makefile  catalogue.txt  main.c
Include/: protocols.h  streamInc.h  utils.c  utils.h
Serveur/: CMakeLists.txt  Makefile  catalogueGlobal.txt  main.c  serveur.c  serveur.h
html/: _client_2main_8c.html  _entrepot_2main_8c.html  _serveur_2main_8c.html  annotated.html  classes.html  client_8h.html  client_8h_source.html  dir_14dd4c32e771ff88395f6c1d8b690515.html  dir_380c2f90b40ddd69238147326503ab38.html  dir_382518d9d13b49734f5f37545e2bca3b.html  dir_41480b73390c9dd53c6c4f32e3177d28.html  dir_41e65480f37a35c0fa162c768c1ac502.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_4897544764552ecad8e48dac5669240c.html  dir_856524284ebe840938865dc061f982fb.html  dir_922c588100a187620fdc1533bc178f73.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f942a7a73394fda25d4213a70555b3f8.html  files.html  globals.html  globals_func.html  index.html  md_readme.html  pages.html  protocols_8h_source.html  serveur_8h.html  serveur_8h_source.html  stream_inc_8h_source.html  structannuaire-members.html  structannuaire.html  structannuaire__t.html  structcarnet__t-members.html  structcarnet__t.html  structcatalogue__t-members.html  structcatalogue__t.html  structclient-members.html  structclient.html  structclient__t.html  structcommande__t-members.html  (+12 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  (+13 more)
